--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,7 @@
       the License.
       -->
     <string name="app_name">WeTrade</string>
+
+    <string name="welcome_button_sign_up">Get started</string>
+    <string name="welcome_button_log_in">Log in</string>
 </resources>
