--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,7 +30,7 @@
     <string name="home_filter_stocks">Stocks</string>
     <string name="home_filter_funds">Funds</string>
     <string name="home_filter_advanced">Advanced</string>
-    <string name="home_positions_title">Position</string>
+    <string name="home_positions_title">Positions</string>
 
     <string name="format_usd">$%s</string>
     <string name="format_percentage">%s%%</string>
